# cascade

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  backwards_compatibility.md  build.rs  owners.txt
.github/workflows/: build-release.sh  cli_test.sh  clippy.sh  comment.yml  doc.sh  format.sh  restore-checks.sh  restore-nightly.sh  restore-test.sh  restore.sh  rust.yml  test.sh
.pipelines/: OneBranch.PullRequest.yml  build.sh  doc.sh  nightly.sh  restore.sh  test.sh
benches/: cascade_benchmarks.rs
data/error_policies/: alias.cas  alias_conflict.cas  bad_allow.cas  bad_allow.hll  bad_inherits_ancestor_associated_call.cas  bad_inherits_associated_call.cas  bad_typecasts.cas  call_casting.cas  class_wrong.cas  cycle.cas  derive_diff_associated_call.cas  derive_explicit.cas  derive_noderive.cas  derive_non_matching_parents.cas  domain_filecon.hll  duplicate_alias.cas  duplicate_association.cas  duplicate_association_nested.cas  duplicate_inherit.cas  duplicate_inheritance.cas  error_in_associate.cas  extend_double_decl.cas  extend_nested_associate.cas  extend_no_decl.cas  fs_context.cas  fs_context_dup.cas  functions_arg_count.cas  functions_no_term.cas  functions_recursion.cas  initial_context.cas  invalid_default1.cas  invalid_default2.cas  let_invalid_type.cas  machine_invalid.cas  machine_invalid_module.cas  machine_missing_req_config.cas  machine_multiple_config.cas  machine_no_modules.cas  machine_virtual.cas  module_cycle.cas  (+26 more)
data/expected_cil/: alias.cil  api.cil  arg_call.cil  arguments.cil  associate.cil  attribute.cil  auditallow.cil  automatic_derive.cil  call_casting.cil  casting.cil  collection.cil  conditional.cil  default.cil  derive.cil  direct_association_reference.cil  domtrans.cil  dontaudit.cil  drop.cil  duplicate_inherit.cil  empty_list.cil  extend.cil  extend_inherit.cil  filecon.cil  fs_context.cil  function.cil  hint.cil  implicit_this.cil  inherit_alias.cil  initial_context.cil  let.cil  machines.cil  makelist.cil  module_alias.cil  module_arguments.cil  module_simple.cil  multifile1.cil  named_args.cil  named_resource_trans.cil  nested_alias.cil  nested_conflict.cil  (+13 more)
data/policies/: alias.cas  api.cas  arg_call.cas  arguments.hll  associate.cas  associate.hll  attribute.hll  auditallow.hll  automatic_derive.cas  call_casting.cas  casting.cas  collection.cas  conditional.cas  default.cas  derive.cas  direct_association_reference.cas  domtrans.hll  dontaudit.hll  drop.cas  duplicate_inherit.cas  empty_list.cas  extend.cas  extend_inherit.cas  filecon.cas  filecon.hll  fs_context.cas  function.cas  function.hll  hint.cas  implicit_this.cas  inherit_alias.cas  initial_context.cas  let.cas  machine_building1.cas  machine_building2.cas  machine_building3.cas  machines.cas  makelist.cas  makelist.hll  module_alias.cas  (+25 more)
data/policies/full_system/: README.md  all_files.cas  base_resource.cas  general.cas  kernel.cas  machine_config.cas  unconfined.cas
data/policies/full_system/contexts/: default_contexts  virtual_domain_context  virtual_image_context  x_contexts
data/policies/stress/: functions.cas
doc/: TE.md  modules.md  policy_composer.md  resource_association.md
src/: alias_map.rs  annotations.rs  ast.rs  av_rule.rs  compile.rs  constants.rs  context.rs  dbus.rs  error.rs  functions.rs  internal_rep.rs  lib.rs  machine.rs  obj_class.rs  parser.lalrpop  sexp_internal.rs  test.rs  util.rs  warning.rs
tools/: update-expected-cil.sh
