[package]
name = "selinux-cascade"
version = "0.0.2"
description = "A High Level Language for specifying SELinux policy"
authors = ["Daniel Burgener <dburgener@linux.microsoft.com>", "Mickael Salaun <mic@linux.microsoft.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dburgener/cascade"
readme = "README.md"
keywords = [ "selinux" ]

[build-dependencies]
lalrpop = "0.19"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
criterion = "0.3"

[dependencies]
backtrace = "0.3"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
flate2 = "1"
is-terminal = "0.4"
lalrpop-util = "0.19"
regex = "1"
quick-xml = "0.27"
sexp = "1.1"
tar = "0.4"
termcolor = "1.1"
thiserror = "1.0"
walkdir = "2"

[[bench]]
name = "cascade_benchmarks"
harness = false
