[package]
name = "selinux-cascade"
version = "0.0.2"
description = "A High Level Language for specifying SELinux policy"
authors = ["Daniel Burgener <dburgener@linux.microsoft.com>", "Mickael Salaun <mic@linux.microsoft.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dburgener/cascade"
readme = "README.md"
keywords = [ "selinux" ]

[build-dependencies]
#lalrpop = { git = "https://github.com/QuarticCat/lalrpop.git", rev = "366e87ac9f54c0e019d4f9d24e0f2af2d15ac4be", features = ["unicode"] }
lalrpop = { git = "https://github.com/QuarticCat/lalrpop.git", rev = "d1e99cc6cb05700b7e681db74b2d1e4a4941d423", features = ["unicode"] }
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
criterion = "0.4"

[dependencies]
backtrace = "0.3"
clap = { version = "4", features = ["derive"] }
codespan-reporting = "0.11"
flate2 = "1"
is-terminal = "0.4"
lalrpop-util = { git = "https://github.com/QuarticCat/lalrpop.git", rev = "d1e99cc6cb05700b7e681db74b2d1e4a4941d423", features = ["unicode"] }
#lalrpop-util = { git = "https://github.com/QuarticCat/lalrpop.git", rev = "366e87ac9f54c0e019d4f9d24e0f2af2d15ac4be", features = ["unicode"] }
regex = "1"
quick-xml = "0.27"
sexp = "1.1"
tar = "0.4"
termcolor = "1.1"
thiserror = "1.0"
walkdir = "2"
# Work around https://github.com/lalrpop/lalrpop/issues/750
# This not a dependency of us, but of lalrpop, and lalrpop has the "features"
# option missing, which was masked by their inclusion of regex 1.7.x, but when
# regex 1.8.x was published, that exposed the lalrpop bug.  There is a proposed
# fix PR in lalrpop.  Once it's merged and a workaround is published, remove
# this
regex-syntax = { version = "0.6", default_features = false, features = ["unicode"] }

[[bench]]
name = "cascade_benchmarks"
harness = false
